* Small UI update in navigation bar