@@ -5,37 +5,24 @@
     
     
       
-      <testcase classname="fastlane.lanes" name="0: default_platform" time="0.000239">
+      <testcase classname="fastlane.lanes" name="0: default_platform" time="0.000328">
         
       </testcase>
     
       
-      <testcase classname="fastlane.lanes" name="1: puro flutter clean" time="7.9966">
+      <testcase classname="fastlane.lanes" name="1: puro flutter clean" time="7.648322">
         
       </testcase>
     
       
-      <testcase classname="fastlane.lanes" name="2: puro flutter pub get" time="4.21724">
+      <testcase classname="fastlane.lanes" name="2: puro flutter pub get" time="3.322026">
         
       </testcase>
     
       
-      <testcase classname="fastlane.lanes" name="3: puro flutter build apk --target-platform=android-arm64" time="60.003022">
+      <testcase classname="fastlane.lanes" name="3: puro flutter build appbundle" time="13.113539">
         
-      </testcase>
-    
-      
-      <testcase classname="fastlane.lanes" name="4: mv ../../build/app/outputs/flutter-apk/app-release.apk ../../build/app/outputs/flutter-apk/balun.apk" time="0.00458">
-        
-      </testcase>
-    
-      
-      <testcase classname="fastlane.lanes" name="5: set_github_release" time="3.439057">
-        
-      </testcase>
-    
-      
-      <testcase classname="fastlane.lanes" name="6: notification" time="0.396295">
+          <failure message="/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.228.0/fastlane/lib/fastlane/actions/actions_helper.rb:67:in &apos;Fastlane::Actions.execute_action&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.228.0/fastlane/lib/fastlane/fast_file.rb:224:in &apos;Fastlane::FastFile.sh&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.228.0/fastlane/lib/fastlane/fast_file.rb:216:in &apos;Fastlane::FastFile#sh&apos;&#10;Fastfile:16:in &apos;block (2 levels) in Fastlane::FastFile#parsing_binding&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.228.0/fastlane/lib/fastlane/lane.rb:41:in &apos;Fastlane::Lane#call&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.228.0/fastlane/lib/fastlane/runner.rb:49:in &apos;block in Fastlane::Runner#execute&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.228.0/fastlane/lib/fastlane/runner.rb:45:in &apos;Dir.chdir&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.228.0/fastlane/lib/fastlane/runner.rb:45:in &apos;Fastlane::Runner#execute&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.228.0/fastlane/lib/fastlane/lane_manager.rb:46:in &apos;Fastlane::LaneManager.cruise_lane&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.228.0/fastlane/lib/fastlane/command_line_handler.rb:34:in &apos;Fastlane::CommandLineHandler.handle&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.228.0/fastlane/lib/fastlane/commands_generator.rb:110:in &apos;block (2 levels) in Fastlane::CommandsGenerator#run&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/commander-4.6.0/lib/commander/command.rb:187:in &apos;Commander::Command#call&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/commander-4.6.0/lib/commander/command.rb:157:in &apos;Commander::Command#run&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/commander-4.6.0/lib/commander/runner.rb:444:in &apos;Commander::Runner#run_active_command&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.228.0/fastlane_core/lib/fastlane_core/ui/fastlane_runner.rb:124:in &apos;Commander::Runner#run!&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/commander-4.6.0/lib/commander/delegates.rb:18:in &apos;Commander::Delegates#run!&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.228.0/fastlane/lib/fastlane/commands_generator.rb:363:in &apos;Fastlane::CommandsGenerator#run&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.228.0/fastlane/lib/fastlane/commands_generator.rb:43:in &apos;Fastlane::CommandsGenerator.start&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.228.0/fastlane/lib/fastlane/cli_tools_distributor.rb:123:in &apos;Fastlane::CLIToolsDistributor.take_off&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/gems/fastlane-2.228.0/bin/fastlane:23:in &apos;&lt;top (required)&gt;&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/bin/fastlane:25:in &apos;Kernel#load&apos;&#10;/opt/homebrew/lib/ruby/gems/3.4.0/bin/fastlane:25:in &apos;&lt;main&gt;&apos;&#10;&#10;Exit status of command &apos;puro flutter build appbundle&apos; was 1 instead of 0.&#10;Changing current working directory to: /Users/josipkilic/Projects/balun&#10;Resolving dependencies...&#10;Downloading packages...&#10;  _fe_analyzer_shared 85.0.0 (88.0.0 available)&#10;  analyzer 7.7.1 (8.1.1 available)&#10;  characters 1.4.0 (1.4.1 available)&#10;  dart_style 3.1.1 (3.1.2 available)&#10;  material_color_utilities 0.11.1 (0.13.0 available)&#10;  meta 1.16.0 (1.17.0 available)&#10;  petitparser 6.1.0 (7.0.1 available)&#10;  xml 6.5.0 (6.6.1 available)&#10;Got dependencies!&#10;8 packages have newer versions incompatible with dependency constraints.&#10;Try `flutter pub outdated` for more information.&#10;Running Gradle task &apos;bundleRelease&apos;...                          &#10;e: file:///Users/josipkilic/.puro/envs/stable/flutter/packages/flutter_tools/gradle/src/main/kotlin/FlutterPlugin.kt:758:21 Unresolved reference: filePermissions&#10;e: file:///Users/josipkilic/.puro/envs/stable/flutter/packages/flutter_tools/gradle/src/main/kotlin/FlutterPlugin.kt:759:25 Unresolved reference: user&#10;e: file:///Users/josipkilic/.puro/envs/stable/flutter/packages/flutter_tools/gradle/src/main/kotlin/FlutterPlugin.kt:760:29 Unresolved reference: read&#10;e: file:///Users/josipkilic/.puro/envs/stable/flutter/packages/flutter_tools/gradle/src/main/kotlin/FlutterPlugin.kt:761:29 Unresolved reference: write&#10;&#10;FAILURE: Build failed with an exception.&#10;&#10;* What went wrong:&#10;Execution failed for task &apos;:gradle:compileKotlin&apos;.&#10;&gt; A failure occurred while executing org.jetbrains.kotlin.compilerRunner.GradleCompilerRunnerWithWorkers$GradleKotlinCompilerWorkAction&#10;   &gt; Compilation error. See log for more details&#10;&#10;* Try:&#10;&gt; Run with --stacktrace option to get the stack trace.&#10;&gt; Run with --info or --debug option to get more log output.&#10;&gt; Run with --scan to get full insights.&#10;&#10;* Get more help at https://help.gradle.org&#10;&#10;BUILD FAILED in 10s&#10;Running Gradle task &apos;bundleRelease&apos;...                             11.1s&#10;Gradle task bundleRelease failed with exit code 1&#10;" />
         
       </testcase>
     
